--- a/app/components/ConfigPane.scss
+++ b/app/components/ConfigPane.scss
@@ -1,10 +1,42 @@
 .selected {
     background-color :rgba(255, 255, 255, .2);
+	color: white;
 }
 
-.noselected {
+.notselected {
+	background-color :rgba(255, 255, 255, .0);
+	color: darkgray;
 }
+
+.notselected:hover {
+	transition: background-color 130ms ease-out;
+	background-color :rgba(255, 255, 255, .2);
+	color: darkgray;
+}
+
+ul {
+	padding: 0;
+}
+
 
 .item {
+
 	display: grid;
+	height: 25px;
+
+	button {
+		border: none;
+		padding: 0;
+	}
+}
+
+.addButton{
+	background-color: rgba(255, 255, 255, .0);
+	color: darkgray;
+	border: none;
+}
+
+.addButton:hover{
+	transition: background-color 130ms ease-out;
+	color: white;
 }
