--- a/app/containers/wrapper.scss
+++ b/app/containers/wrapper.scss
@@ -2,11 +2,14 @@
   display: grid;
   height: 100%;
   width: 100%;
+	grid-template-columns: 140px 350px 350px auto;
+	grid-template-rows: 100%;
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
 
 	.configPane {
     grid-column: 1;
 		border-right: 1px solid #ccc;
-		width: 250px;
   }
 
   .fileList {
