--- a/app/components/ConfigPane.scss
+++ b/app/components/ConfigPane.scss
@@ -31,12 +31,15 @@ ul {
 }
 
 .addButton{
-	background-color: rgba(255, 255, 255, .0);
-	color: darkgray;
-	border: none;
-}
+	text-align: center;
+	button {
+		background-color: rgba(255, 255, 255, .0);
+		color: darkgray;
+		border: none;
+	}
+	button:hover{
+		transition: background-color 130ms ease-out;
+		color: white;
+	}
 
-.addButton:hover{
-	transition: background-color 130ms ease-out;
-	color: white;
 }
