--- a/app/containers/wrapper.scss
+++ b/app/containers/wrapper.scss
@@ -1,27 +1,39 @@
 .wrapper {
   display: grid;
-  height: 100%;
+  height: 100vh;
   width: 100%;
-	grid-template-columns: 140px 350px 350px auto;
+	grid-template-columns: 140px auto 350px 350px;
 	grid-template-rows: 100%;
   grid-auto-rows: minmax(100px, auto);
 
 	.configPane {
     grid-column: 1;
 		border-right: 1px solid gray;
+		> div {
+			margin: 8px;
+		}
   }
 
   .fileList {
     grid-column: 2;
 		border-right: 1px solid gray;
+		> div {
+			margin: 8px;
+		}
   }
 
   .fileMetadata {
     grid-column: 3;
 		border-right: solid 1px gray;
+		> div {
+			margin: 8px;
+		}
   }
 
 	.outputSetting{
 		grid-column: 4;
+		> div {
+			margin: 8px;
+		}
 	}
 }
