--- a/app/app.global.css
+++ b/app/app.global.css
@@ -1,5 +1,5 @@
 @import "~font-awesome/css/font-awesome.css";
-@import '../node_modules/react-selectize/themes/index.css';
+@import '~react-selectize/themes/index.css';
 @import '~materialize-css/dist/css/materialize.min.css';
 
 body {
