--- a/app/containers/wrapper.scss
+++ b/app/containers/wrapper.scss
@@ -2,8 +2,8 @@
   display: grid;
   height: 100vh;
   width: 100%;
-	grid-template-columns: 140px auto 350px 350px;
-	grid-template-rows: 100%;
+	grid-template-columns: 140px auto 350px;
+	grid-template-rows: 50% 50%;
   grid-auto-rows: minmax(100px, auto);
 
 	.configPane {
@@ -28,7 +28,8 @@
   }
 
 	.outputSetting{
-		grid-column: 4;
+		grid-column: 1 / span 3;
+		grid-line: 2;
 		> div {
 			margin: 8px;
 		}
