Added snapshot to fileList
-Create snapshot in a temps dir
-Remove snapshot when exiting
-Remplace table by a list of div

it's realy ugly for know I have to think how to make it sexy.

--- a/app/components/FileLine.scss
+++ b/app/components/FileLine.scss
@@ -1,6 +1,18 @@
 .selected {
     background-color :rgba(255, 255, 255, .2);
+	position: relative;
+	height: 240px;
 }
 
-.noselected {
+.notselected {
+	position: relative;
+	height: 240px;
+}
+
+.thumbnail {
+	position: absolute;
+	left: 0px;
+    top: 0px;
+	max-height: 240px;
+	z-index: -1;
 }
